# gba-bt-hid

./: .gitignore  CMakeLists.txt  README.md  gba_rules.cmake
circuit/: GBA-BT-HID-cache.lib  GBA-BT-HID.bak  GBA-BT-HID.kicad_pcb  GBA-BT-HID.sch  fp-info-cache
esp32/: CMakeLists.txt  Makefile  sdkconfig
esp32/main/: gba_rom.c  hc05.c  multiboot.h  uart.c
gba/: CMakeLists.txt
gba-bt-hid-fw/: gba-bt-hid-fw.ino  memory.ino  multiboot.ino
gba-bt-hid-fw-esp32/: .gitignore  CMakeLists.txt  Makefile  sdkconfig  sdkconfig.old
gba-bt-hid-fw-esp32/main/: CMakeLists.txt  bluetooth.c  bluetooth.h  esp_hidd_profile_api.c  esp_hidd_profile_api.h  gba_rom.c  gba_rom.h  hc05.c  hc05.h  hid_device.c  hid_device.h  hid_device_le_profile.c  hid_device_le_profile.h  main.c  multiboot.c  multiboot.h  uart.c  uart.h
gba-hid-fw-flasher/: gba-hid-fw-flasher.ino
gba/source/: hc05.c  hc05.h  main.c  main.cpp  uart.c  uart.h
hc-05/hc-05/: hc-05.ino
multiboot/: multiboot.ino
source/: main.cpp
