idf_component_register(SRCS
        "main.c"
        "multiboot.c"
        "multiboot.h"
        "bluetooth.c"
        "bluetooth.h"
        "hid_device.c"
        "hid_device.h"
        "hid_device_le_profile.c"
        "hid_device_le_profile.h"
        "esp_hidd_profile_api.c"
        "esp_hidd_profile_api.h"
        INCLUDE_DIRS ".")